--- a/client/layouts/NSI/NSI.html
+++ b/client/layouts/NSI/NSI.html
@@ -15,11 +15,11 @@
         </a>
       </li>
 
-      <!--<li class="{{isActivePath '/createDoctorType'}}">
-        <a href="/createDoctorType">
-          <i class="fa fa-users"></i> <span>Добавить тип</span>
+      <!-- <li class="{{isActivePath '/createMaster'}}">
+        <a href="/createMaster">
+          <i class="fa fa-users"></i> <span>Добавить мастера2</span>
         </a>
-      </li>-->
+      </li> -->
 
       <li class="{{isActivePath '/createMasterType'}}">
         <a href="/createMasterType">
@@ -28,7 +28,7 @@
       </li>
 
 
-     <li class="{{isActivePath '/createTreatment'}}">
+  <!--   <li class="{{isActivePath '/createTreatment'}}">
         <a href="/createTreatment">
           <i class="fa fa-medkit"></i> <span>Добавить прическа</span>
         </a>
@@ -36,6 +36,12 @@
       <li class="{{isActivePath '/createDiagnosis'}}">
         <a href="/createDiagnosis">
           <i class="fa fa-medkit"></i> <span>Добавить диагноз</span>
+        </a>
+      </li> -->
+
+      <li class="{{isActivePath '/createService'}}">
+        <a href="/createService">
+          <i class="fa fa-edit"></i> <span>Добавить услугу</span>
         </a>
       </li>
 
