--- a/client/layouts/registerPatient/registerPatient.html
+++ b/client/layouts/registerPatient/registerPatient.html
@@ -45,7 +45,7 @@
     <div class="col-sm-10 col-sm-offset-1">
       <div class="box box-info">
         <div class="box-header with-border">
-          <h3 class="box-title">Расписание врачей</h3>
+          <h3 class="box-title">Расписание мастеров</h3>
         </div>
         <div class="box-body" id="doctorSchedule">
         </div>
