--- a/client/layouts/appointment/appointment.html
+++ b/client/layouts/appointment/appointment.html
@@ -3,7 +3,7 @@
     <div class="box box-primary">
       <div class="box-header with-border">
         <h3 class="box-title">
-          Прием пациента: {{patientName}}
+          Прием клиента: {{patientName}}
           <a href="#" id="history-link"> | История услуг</a>
           <a href="#" id="cancel-event-link"> | Отменить прием</a>
         </h3>
@@ -16,25 +16,21 @@
             <h4 class="col-sm-12">Услуга: 1</h4>
             <div class="form-group col-sm-5">
               <label>Услуга</label>
-              <select disabled required class="form-control diagnoses-select2 diagnoses-list" multiple="multiple" data-placeholder="выберите диагноз" style="width: 100%;">
-                {{#each diagnoses}}
+              <select disabled required class="form-control service-select2 services-list" multiple="multiple" data-placeholder="выберите услугу" style="width: 100%;">
+                {{#each services}}
                 <option value="{{_id}}">{{name}}</option>
                 {{/each}}
               </select>
+            <!--  <button id="add-service" class="btn">
+                Добавить услугу <i class="fa fa-plus"></i>
+              </button>-->
             </div>
-            <div class="form-group col-sm-5">
-              <label>Прическа</label>
-              <select disabled required class="form-control treatments-select2 treatments-list" multiple="multiple" data-placeholder="выберите лечение" style="width: 100%;">
-                {{#each treatments}}
-                <option value="{{_id}}">{{name}}</option>
-                {{/each}}
-              </select>
-            </div>
-          </div>
+
+             </div>
         </div>
         <div class="box-footer">
           <button id="add-treatment-group-button" class="btn btn-warning">
-            Добавить лечение <i class="fa fa-plus-square"></i>
+            Добавить услугу <i class="fa fa-plus-square"></i>
           </button>
         </div>
         <div id="total" class="col-sm-20 box-footer">Итога:</div>
