--- a/client/layouts/mainLayout/mainLayout.html
+++ b/client/layouts/mainLayout/mainLayout.html
@@ -18,7 +18,13 @@
           <ul class="nav navbar-nav">
             <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="https://pfo.spr.ru/pages_logotip/2016-01/36099.png" class="user-image" alt="User Image">
+              <li class="{{isActivePath '/authorizeUser'}}">
+                <a id="logout-button" href="#">
+                  <i class="fa fa-sign-out"></i> <span>Выйти</span>
+                </a>
+              </li>
+              
+
               <span class="hidden-xs">
                 {{#each clinic}}
                 <li>{{name}}</li>
@@ -39,25 +45,36 @@
           {{#if currentUser}}
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="https://pfo.spr.ru/pages_logotip/2016-01/36099.png" class="img-circle" alt="User Image">
+              <img src="http://dailydropcap.com/images/B-5.jpg" class="img-circle" alt="User Image">
             </div>
+
             <div class="pull-left info">
               <p>{{currentUser.username}}</p>
               <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
           </div>
+
           <li class="header">Пациенты</li>
           <li class="{{isActivePath '/registerPatient'}}">
             <a href="/registerPatient">
               <i class="fa fa-user-plus"></i> <span>Добавить и записать</span>
             </a>
           </li>
+
           <li class="header">Склад</li>
           <li class="{{isActivePath '/resource'}}">
             <a href="/resource">
               <i class="fa fa-archive"></i> <span>Склад</span>
             </a>
           </li>
+
+          <li class="header">История приема</li>
+          <li class="{{isActivePath '/archive'}}">
+            <a href="/archive">
+              <i class="fa fa-table"></i> <span>История приема</span>
+            </a>
+          </li>
+
           <li class="header">НСИ</li>
           <li class="{{isActivePath '/NSI'}}">
             <a href="/NSI">
@@ -65,11 +82,7 @@
             </a>
           </li>
 
-          <li class="{{isActivePath '/authorizeUser'}}">
-            <a id="logout-button" href="#">
-              <i class="fa fa-user"></i> <span>Выйти</span>
-            </a>
-          </li>
+
           {{else}}
           <li class="{{isActivePath '/authorizeUser'}}">
             <a href="/authorizeUser">
